fix overlap text with final image

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     margin: auto;
     display: flex;
     flex-flow: column nowrap;
+    margin-top: 30vh;
 }
 
 
@@ -128,7 +129,7 @@ main {
     display: flex;
     flex-flow: column nowrap;
     width: 100vw;
-    margin-bottom: 20rem;
+    margin-bottom: 50rem;
     margin: 0;
     justify-content: center;
 }
@@ -196,6 +197,7 @@ a:visited {
         margin: 10px;
         display: flex;
         flex-flow: column nowrap;
+        margin-top: 30vh;
     }
 
     #intro {
@@ -253,7 +255,6 @@ a:visited {
     body {
         font-size: 1rem;
         overflow-x: hidden;
-
     }
 }
 
